# titration_robot_cell_control

./: CMakeLists.txt  package.xml
config/: real_robot_calibration.yaml
launch/: rsp.launch.py  start_robot.launch.py  ur_control.launch.py
scripts/: example_move.py  move_until_example.py
src/: titration_node.cpp  trajectory_until_node.cpp
urdf/: titration_robot_cell_controlled.urdf.xacro
